// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should change gap 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
  grid-gap: 1.5rem;
  grid-template-columns: repeat(5,1fr);
  width: 600px;
}

<div
    class="emotion-0"
    data-chakra-component="CGrid"
  >
    Grid Me
  </div>
</DocumentFragment>
`;

exports[`should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: grid;
}

<div
    class="emotion-0"
    data-chakra-component="CGrid"
  >
    Grid Me
  </div>
</DocumentFragment>
`;
